# field_of_play

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  test.ipynb
