[project]
authors = [{name = "Chris Fonnesbeck", email = "fonnesbeck@gmail.com"}]
description = "Add a short description here"
name = "field_of_play"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pybaseball>=2.2.7,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
field_of_play = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pymc = ">=5.20.0,<6"
ipykernel = ">=6.29.5,<7"
